add testing API
